# scintilla

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  environment.yml  justfile  pyproject.toml
.github/workflows/: test.yml
data/aois/: mb-2023-06-04_169_aoi.geojson  us-mexico-border_169_aoi.geojson  us-mexico-border_aoi.geojson
data/glm_raw/G18/2023/7/31/: OR_GLM-L3-GLMF-M6_G18_s202321204100000_e202321204110000_c20232120412080.nc  OR_GLM-L3-GLMF-M6_G18_s202321204110000_e202321204120000_c20232120413090.nc  (+19 more)
data/isslis/: isslis_flash_index.parquet
data/isslis/2023/7/31/: ISS_LIS_SC_V2.2_20230731_044850_FIN.nc
docs/: DECISIONS.md  GLM_ISSLIS_cross_sensor_validation.md  GLM_Lightning_Pipeline.md  INSTALL.md  README_ISSLIS.md  WORKFLOWS.md  glm_sensor_coverage.md  storm_gallery.md
src/scintilla/: __init__.py
src/scintilla/animate/: movie_frame_map.py  movie_map.py
src/scintilla/common/: defines.py  granule_utils.py  map_time.py  map_utils.py  my_logging.py  utils.py
src/scintilla/tools/: aoi_snap_aspect.py  aoi_to_16-9.py  aoi_tool.py  backfill_isslis.py  chips_to_polygons.py  cut_glm_aoi_chips.py  cut_glm_state_chips.py  download_from_urls.py  find_isslis_overlaps.py  get_granules.py  get_rain_window_granules.py  inventory_data.py  plot_glm_coverage.py  search_collections.py  search_granules.py  sum_glm_chips.py
src/scintilla/weather/: bulk_isd_download.py  download_isd_station_data.py  download_master_isd_stations_list.py  find_isd_stations_within_aoi.py  weather_utils.py
tests/: test_map_time.py  test_utils.py  test_weather_utils.py
